//@xiesong.4.11.2016
syntax = "proto2";

package youmai;

enum ServiceType{
	COM_SERVER=1;
	ROUTER_SERVER=2;
	LOADBALANCE_SERVER=3;
	TRANSFER_SERVER=4;
}
enum ServiceID{
	SID_MONITOR=1;
	SID_CONN=2;
	SID_DISPATCH=3;
	SID_LOGIN=4;
	SID_MSG=5;
	SID_LOADBALANCE=6;
    SID_BROADCAST=7;
	SID_DBPROXY=8;
	SID_GROUP=9;
	SID_BUDDY=10;
	//other server
	SID_REDIS=100;
}

enum COMMANDID {
	HEART_BEAT = 1;
	HEART_BEAT_ACK = 2;
    ROUTE_REQ = 20;
    ROUTE_ONLINECHECK = 21;
    ROUTE_ONLINECHECK_ACK = 22;
    ROUTE_PHONE_CHECK = 23;
    ROUTE_PHONE_CHECK_ACK = 24;
    USER_LOGIN = 101;
    USER_LOGIN_ACK = 102;
	USER_LOGOFF = 103;
	USER_LOGOFF_ACK = 104;
	MULTI_DEVICE_KICKED_NOTIFY = 105;

	IM_TEXT = 106;
	IM_PICTURE = 107;
	IM_AUDIO = 108;
	IM_VIDEO = 109;
	IM_URL = 110;
	IM_LOCATION = 111;
	IM_LOCATION_SHARE_BEGIN = 112;
	IM_LOCATION_SHARE_ANSWER = 113;
	IM_LOCATION_SHARE_CONTINUE = 114;
	IM_LOCATION_SHARE_END = 115;


	PHONEDIAL = 117;
	PHONEDIAL_ACK = 118;

	GET_CONTACTS_INFO = 119;
	GET_CONTACTS_INFO_ACK = 120;

    PHP_USER_MODIFYSTATUS = 121;
    PHP_USER_MODIFYSTATUS_ACK = 122;

    PHP_ADMIN_MODIFYUSERSTATUS = 123;
    PHP_ADMIN_MODIFYUSERSTATUS_ACK =124;
	
	
    REQUEST_IP = 400; //BACKEND ONLY.
    REQUEST_IP_ACK = 401;
    REGIST_COMMUNICATIONSERVICE = 402;//route注册
	REPORT_ONLINERS=403;
	BROATCAT_NOTIFY=404;
	ROUTE_BRAODCAST=405; //route 广播
	CID_USER_STAT_PUSH_REQ=406;//用户状态广播
	CID_USER_STAT_SYNC_REQ=407;
	CID_USER_STAT_SYNC_RSP=408;
	REGIST_RSP=409;

    GENERAL_MESSAGE = 501;
    POP_GENERAL_MESSAGE = 502;
    POP_GENERAL_MESSAGE_ACK = 503;

    BULLETIN = 600;
    BULLETIN_NOTIFY = 601;
    BULLETIN_PUBLISH = 605;
    BULLETIN_PUBLISH_ACK = 606;

    BIZCARD_GET_BYPHONE = 701;
	BIZCARD_GET_BYPHONE_ACK = 702;
    BIZCARD_INSERT = 703;
	BIZCARD_INSERT_ACK = 704;
    BIZCARD_UPDATE = 705;
	BIZCARD_UPDATE_ACK = 706;
    BIZCARD_DELETE = 707;
	BIZCARD_DELETE_ACK = 708;

	BUSINESS_QUERY_AD = 750; // 商家查询代言
	BUSINESS_QUERY_AD_ACK=751;
	BUSINESS_SAVE_AD =752;
	BUSINESS_SAVE_AD_ACK =753;
	BUSINESS_UPDATE_AD =754;
	BUSINESS_UPDATE_AD_ACK =755;
	BUSINESS_DELETE_AD =756;
	BUSINESS_DELETE_AD_ACK =757;

	USERSHOWRULE_RESULT = 758;
	USERSHOWRULE_GET = 759;
	USERSHOWRULE_SAVE = 760;
	USERSHOWRULE_UPDATE = 761;
	USERSHOWRULE_DELETE = 762;

	BONDERY_MQ = 10000; //this is the bondery for mq. outside the bondery; com service should post the request to mq.

    SYSTEM_LOG = 10001;

	LOCATIONSHARE = 10700;
	LOCATIONSHARE_NOTIFY = 10701;
	LOCATIONSHARE_INVIT = 10702;
    LOCATIONSHARE_INVIT_ACK = 10703;
    LOCATIONSHARE_INVIT_NOTIFY = 10704;
	LOCATIONSHARE_JOIN = 10705;
	LOCATIONSHARE_JOIN_ACK = 10706;
	LOCATIONSHARE_JOIN_NOTIFY = 10707;
	LOCATIONSHARE_QUIT = 10709;
	LOCATIONSHARE_QUIT_ACK = 10710;
	LOCATIONSHARE_QUIT_NOTIFY = 10711;


    PUSH_APNS = 10801 ; //this does not guarantee successed.
                        //and does not give you a ack.
    PUSH_APNS_ACK = 10802 ;

    PUSH_GENERAL = 10805 ;//Push_General
    PUSH_SMS = 10806 ;//Push_SMS

    ENDORSEMENT_TAKE =10901 ;
    ENDORSEMENT_TAKE_ACK = 10902 ;
    ENDORSEMENT_QUERY = 10911 ;
    ENDORSEMENT_QUERY_ACK = 10912 ;
    ENDORSEMENT_DELET = 10921 ;
    ENDORSEMENT_DELETE_ACK   = 10922 ;
    //商家查询代言领取记录数据。
    ENDORSEMENT_ADMIN_QUERY = 10951 ;
    ENDORSEMENT_ADMIN_QUERY_ACK = 10952 ;


    SHOWBIZ_QUERY = 11001 ;
    SHOWBIZ_QUERY_ACK = 11002 ;
    SHOWBIZ_INSERT = 11011 ;
    SHOWBIZ_INSERT_ACK = 11012 ;
    SHOWBIZ_DELETE = 11021 ;
    SHOWBIZ_DELETE_ACK = 11022 ;
    SHOWBIZ_UPDATE =11031 ;
    SHOWBIZ_UPDATE_ACK = 11032 ;


    SHOWPERSONAL_QUERY  = 11041 ;
    SHOWPERSONAL_QUERY_ACK =11042 ;
    SHOWPERSONAL_INSERT = 11051;
    SHOWPERSONAL_INSERT_ACK =11052 ;
    SHOWPERSONAL_UPDATE = 11061 ;
    SHOWPERSONAL_UPDATE_ACK = 11062 ;
    SHOWPERSONAL_DELETE = 11071 ;
    SHOWPERSONAL_DELETE_ACK = 11072 ;

	SHOWDIAL = 11081;
	SHOWDIAL_ACK = 11082;
	SHOWDIAL_NOTIFY = 11083;
	SHOWDIAL_CACHE_UPDATE_SYSTEMNOTIFY = 11091;


	CID_USER_CONNECT_EXCEPT = 0x4011;
//服务端用	
	CID_USER_STATE_BROADCAST = 0x4111;
	CID_USER_STATE_REPORT    = 0x4112;
	
	CID_MONITOR_CLIENT_REGISTER_REQ = 0x4211;
	CID_MONITOR_CLIENT_REGISTER_RSP = 0x4212;
    CID_MASTER_BROADCAST_SERVER_INFO =0x4213;
    CID_S2S_AUTHENTICATION_REQ = 0x4214;
    CID_S2S_AUTHENTICATION_RSP = 0x4215;
    CID_S2S_PING = 0x4216;
	CID_S2S_PONG = 0x4217;
	
	CID_REGISTER_CMD_REQ= 0x4221;
	
	
	CID_CLUSTER_STATUS_REQ= 0x4321;
	CID_CLUSTER_STATUS_RSP= 0x4322;
	CID_CONFIG_SET_REQ=0x4326;
	CID_CONFIG_SET_RSP=0x4327;
	
//客户端cmd	
	//消息 cmd
	CID_CHAT_BUDDY=0X5011;
	CID_CHAT_GROUP=0X5012;
	CID_OFFLINE_MSG_NOTIFY = 0x5013;
	CID_CHAT_MSG_ACK=0X5014;
	
//群
    CID_GROUP_LIST_REQ = 0x6011;
	CID_GROUP_LIST_RSP = 0x6012;
	CID_GROUP_INFO_REQ = 0x6013;
	CID_GROUP_INFO_RSP = 0x6014;
	CID_GROUP_MEMBER_REQ = 0x6015;
	CID_GROUP_MEMBER_RSP = 0x6016;
	CID_GROUP_CREATE_REQ = 0x6017;
	CID_GROUP_CREATE_RSP = 0x6018;
	CID_GROUP_DISSOLVE_REQ = 0x6019;
	CID_GROUP_DISSOLVE_RSP = 0x601a;
	CID_GROUP_INFO_MODIFY_REQ = 0x601b;
	CID_GROUP_INFO_MODIFY_RSP = 0x601c;
	CID_GROUP_CHANGE_MEMBER_REQ = 0x601d;
	CID_GROUP_CHANGE_MEMBER_RSP =0x601e;
	//notify
	CID_GROUP_OPT_NOTIFY = 0X6021;
	
	CID_GROUP_CHANGE_MEMBER_NOTIFY = 0X6023;
	CID_GROUP_INFO_MODIFY__NOTIFY = 0X6024;
	//组织架构
	CID_ORG_LIST_REQ =0x6111;
	CID_ORG_LIST_RSP =0x6112;
	
	//消息
	
	CID_GMSG_OFFLINE_MSG_NOTIFY = 0x6222;
	CID_MSG_DATA_LIST_REQ = 0x6223;//历史消息
	CID_MSG_DATA_LIST_RSP = 0x6224;
	CID_GROUP_CHAT_MSG_CANCEL = 0x6225;
	CID_GMSG_OFFLINE_MSG_ACK = 0x6226;
    CID_S2S_CHAT_MSG = 0x6227;
	
    //用户资料
    CID_USER_INFO_REQ =0x7011;
    CID_USER_INFO_RSP= 0x7012;
	
	//好友命令
	CID_BUDDY_LIST_SINGLE_USER_INFO_REQ         = 0x7207; 	//单个用户详细信息
    CID_BUDDY_LIST_USER_INFO_RSP                = 0x7208;

    CID_BUDDY_LIST_CHANGE_AVATAR_REQ             = 0x720f;	//头像修改
    CID_BUDDY_LIST_CHANGE_AVATAR_RSP             = 0x7210;
	CID_BUDDY_LIST_CHANGE_SIGN_INFO_REQ          = 0x7212; //修改个性签名
    CID_BUDDY_LIST_CHANGE_SIGN_INFO_RSP          = 0x7213; 
	CID_BUDDY_LIST_MODIFY_USER_INFO_REQ          = 0x7214; //修改个人信息
	CID_BUDDY_LIST_MODIFY_USER_INFO_RSP          = 0x7215; 
	CID_BUDDY_LIST_OPT_REQ						 = 0x7216; //好友操作（add or delete）
	CID_BUDDY_LIST_OPT_RSP						 = 0x7217; 
	CID_BUDDY_LIST_MODIFY_NICKNAME_REQ			 = 0x7218; //修改好友备注
	CID_BUDDY_LIST_MODIFY_NICKNAME_RSP			 = 0x7219; 
	CID_BUDDY_LIST_REQUEST_LIST_REQ				 = 0x721a; //获取好友请求列表
	CID_BUDDY_LIST_REQUEST_LIST_RSP			     = 0x721b; 
	
	CID_BUDDY_LIST_OPT_RESULT						 = 0x721C; 
	
	CID_CONTACT_COLLECTION_REQ						 = 0x7221; 
	CID_CONTACT_COLLECTION_RSP						 = 0x7222; 
}


enum USER_TYPE {
    USER_TYPE_UNKNOWN = 0;
    USER_TYPE_PERSONAL = 1;
    USER_TYPE_PUBLIC_ACCOUNT = 2;
}

enum ERRNO_CODE {
    ERRNO_CODE_OK = 0;
    ERRNO_CODE_DEFAULT = 2; 			// 2-10 resrved
	ERRNO_CODE_LOGIN_IN_OTHER_DEVICE = 100;		// 异地登陆
	ERRNO_CODE_NO_PROTOCOL      = 101;  		// 没有这个协议
	ERRNO_CODE_TAG_NO_PROTOCOL  = 102;  		// tag不是这个协议的
	ERRNO_CODE_PUSH_QUEUE       = 103;  		// 数据入队列失败
	ERRNO_CODE_LOGON_NO_PHONE_S = 104;		// LOGON无TAG_PHONE_S
	ERRNO_CODE_HEART_ERR_SESSION_S = 105;		// HEART上传TAG_SESSION_S无效
	ERRNO_CODE_NOT_LOGON		= 106;		// 未登录
	ERRNO_CODE_WITHOUT_TAG		= 107;		// 缺少必备项
	ERRNO_CODE_WITHOUT_UID		= 108;		// 缺少uid
	ERRNO_CODE_WITHOUT_TERMID	= 109;		// 缺少termid
	ERRNO_CODE_ERR_SESSIONID	= 110;		// 上传请求的TAG_SESSION_ID无效
	ERRNO_CODE_TERM_UNALIVE		= 111;		// 终端去活
	ERRNO_CODE_ERR_UID			= 112;	// uid错误
	ERRNO_CODE_ERR_PID			= 113;	// Pid错误
	ERRNO_CODE_ERR_RESEND		= 114;		// 重复消息
	ERRNO_CODE_ERR_TID			= 115;	// Tid错误

	ERRNO_CODE_SQL = 200;  			// Storage failure
	ERRNO_CODE_DATA_SRAL = 201; 		// 数据序列化失败
	ERRNO_CODE_NOT_FIND_TARGET_USERID = 203; 	// 没找到对方的用户id
	ERRNO_CODE_DATA_WAREHOUSING_FAILURE_MYSQL = 204;// MYSQL数据入库失败
	ERRNO_CODE_DATA_WAREHOUSING_FAILURE_REDIS = 205;// redis数据入库失败
	ERRNO_CODE_DB_SERVER_EXCEPTION = 206;		// 数据库服务器异常
	ERRNO_CODE_USER_SESSION_ERROR = 207;		// 登陆的sissionid不正确
	ERRNO_CODE_USER_NOT_LOGIN = 208;		// 用户未登陆
	ERRNO_CODE_USER_ID_ERROR = 209;			// 登陆的user_id不正确
	ERRNO_CODE_USER_SEND_TOROUTE_ERROR = 210; 	// 转发至路由失败
	ERRNO_CODE_NOT_DST_PHONE = 211; 		// 缺少对方的电话号码
	ERRNO_CODE_DATABASE_QUERY_FAILDED = 212; 	// 数据库查询失败
	ERRNO_CODE_DATA_EXCEPTION = 213; 	// 数据异常
	ERRNO_CODE_NOT_SESSIONID = 214; 	// 没有携带session id
	ERRNO_CODE_NOT_PHONE = 215; 		// 没有携带手机号码
	ERRNO_CODE_PHONE_ERROR = 216; 		// 手机号码错误
	ERRNO_CODE_DATABASE_NOT_DATA = 217; 	// 数据库没有数据
	ERRNO_CODE_SHOW_EXPIRED = 218; 		// 对方的秀已经过期
	ERRNO_CODE_NOT_TOKEN_ID = 219; 		// 没有携带token id
	ERRNO_CODE_NOT_SHOW = 220; 		// 没有找到对方的秀信息
	ERRNO_CODE_NOT_HUXIN_USER = 403; 	// 非呼信用户
    ERRNO_CODE_NOT_DEVICE_ID=404;          //没有设备id
	
    ERRNO_CODE_BLOCKED_BY_DST_USER = 501;   //

    ERRNO_CODE_INVALID_USER_INFO = 1101;
    ERRNO_CODE_INVALID_SESSION = 1102;
    ERRNO_CODE_INVALID_PASSWD = 1103;

    ERRNO_CODE_INVALID_IM_CHAT_TARGET_USER = 1201;
	ERRNO_CODE_INVALID_IM_CHAT_EMPTY_BODY_NOT_ALLOWED = 1202;

	ERRNO_CODE_LOCATIONSHARE_TASK_NOT_EXIST = 1301;
    ERRNO_CODE_LOCATIONSHARE_NOT_INSIDE_TASK = 1302;
}

enum Device_Type {
	DeviceType_IPhone = 1;
	DeviceType_Android = 2;
	DeviceType_IPad = 3;
	DeviceType_AndroidPad = 4;
	DeviceType_UNKNOWN = 5;
}

message Heart_Beat {
    //optional int32 IM_id = 1;
}

message Heart_Beat_Ack {
    //optional int32 IM_id = 1;
}

enum USER_SHOW_STATUS {
    USER_SHOW_STATUS_NORMAL = 0; // 0 正常 1停用 2冻结
    USER_SHOW_STATUS_DISABLE = 1;
	USER_SHOW_STATUS_FROZEN = 2;
}

enum UserState{
	USER_STATE_ONLINE=0;
	USER_STATE_OFFLINE=1;
	USER_STATE_LOGOUT=3;
}

enum ResultCode{
	RESULT_CODE_SUCCESS=1;
	RESULT_CODE_FAIL=2;
}


enum IM_CHANNEL{
    IM_CHANNEL_DEFAULT = 0;
    IM_CHANNEL_SMS = 1;
    IM_CHANNEL_QQ = 2;
}


